--- a/src/Microsoft.ML.CodeGenerator/Templates/Console/ModelProject.tt
+++ b/src/Microsoft.ML.CodeGenerator/Templates/Console/ModelProject.tt
@@ -19,6 +19,12 @@
 <# if (IncludeFastTreePackage){ #>
     <PackageReference Include="Microsoft.ML.FastTree" Version="1.3.1" />
 <#}#>
+<# if (IncludeImageTransformerPackage){ #>
+    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.4.0" />
+<#}#>
+<# if (IncludeImageClassificationPackage){ #>
+    <PackageReference Include="Microsoft.ML.Dnn" Version="1.4.0" />
+<#}#>
   </ItemGroup>
 
   <ItemGroup>
@@ -32,4 +38,6 @@
 public bool IncludeLightGBMPackage {get;set;}
 public bool IncludeMklComponentsPackage {get;set;}
 public bool IncludeFastTreePackage {get;set;}
+public bool IncludeImageTransformerPackage {get; set;}
+public bool IncludeImageClassificationPackage {get; set;}
 #>
