--- a/src/Microsoft.ML.CodeGenerator/Templates/Console/PredictProject.tt
+++ b/src/Microsoft.ML.CodeGenerator/Templates/Console/PredictProject.tt
@@ -21,6 +21,12 @@
 <# if (IncludeFastTreePackage){ #>
     <PackageReference Include="Microsoft.ML.FastTree" Version="1.3.1" />
 <#}#>
+<# if (IncludeImageTransformerPackage){ #>
+    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.4.0" />
+<#}#>
+<# if (IncludeImageClassificationPackage){ #>
+    <PackageReference Include="Microsoft.ML.Dnn" Version="1.4.0" />
+<#}#>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\\<#= Namespace #>.Model\\<#= Namespace #>.Model.csproj" />
@@ -31,4 +37,6 @@ public string Namespace {get;set;}
 public bool IncludeLightGBMPackage {get;set;}
 public bool IncludeMklComponentsPackage {get;set;}
 public bool IncludeFastTreePackage {get;set;}
+public bool IncludeImageTransformerPackage {get; set;}
+public bool IncludeImageClassificationPackage {get; set;}
 #>
