Add tensorflow binary dependency, remove data.model, and update tests.

--- a/src/Microsoft.ML.CodeGenerator/Templates/Console/ModelProject.tt
+++ b/src/Microsoft.ML.CodeGenerator/Templates/Console/ModelProject.tt
@@ -24,6 +24,7 @@
 <#}#>
 <# if (IncludeImageClassificationPackage){ #>
     <PackageReference Include="Microsoft.ML.Dnn" Version="1.4.0" />
+	<PackageReference Include="SciSharp.TensorFlow.Redist" Version="1.14.0" />
 <#}#>
   </ItemGroup>
 
