--- a/src/Microsoft.ML.CodeGenerator/Templates/Console/PredictProject.tt
+++ b/src/Microsoft.ML.CodeGenerator/Templates/Console/PredictProject.tt
@@ -26,6 +26,7 @@
 <#}#>
 <# if (IncludeImageClassificationPackage){ #>
     <PackageReference Include="Microsoft.ML.Dnn" Version="1.4.0" />
+	<PackageReference Include="SciSharp.TensorFlow.Redist" Version="1.14.0" />
 <#}#>
   </ItemGroup>
   <ItemGroup>
